tests/integration/snapshots/integration__snapshot_cli_test__cli_help_agents.snap
---
source: tests/integration/cli_test.rs
assertion_line: 79
expression: output
---
=== agr agents --help ===
Exit code: 0

--- stdout ---
Manage the list of AI agents that AGR knows about.

Configured agents are used by shell integration to automatically
record sessions. You can also control which agents are auto-wrapped
using the no-wrap subcommand.

EXAMPLES:
    agr agents list                  [37mShow configured agents[0m
    agr agents add claude            [37mAdd claude to the list[0m
    agr agents remove codex          [37mRemove codex from the list[0m
    agr agents no-wrap add claude    [37mDisable auto-wrap for claude[0m

Usage: agr agents <COMMAND>

Commands:
  list        [37mList all configured agents[0m
  add         [37mAdd an agent to the configuration[0m
  remove      [37mRemove an agent from the configuration[0m
  is-wrapped  [37mCheck if an agent should be wrapped (used by shell integration)[0m
  no-wrap     [37mManage agents that should not be auto-wrapped[0m
  help        [37mPrint this message or the help of the given subcommand(s)[0m

Options:
  -h, --help
          Print help (see a summary with '-h')
--- stderr ---
