tests/integration/snapshots/integration__snapshot_cli_test__cli_help_shell.snap
---
source: tests/integration/cli_test.rs
assertion_line: 89
expression: output
---
=== agr shell --help ===
Exit code: 0

--- stdout ---
Manage automatic session recording via shell integration.

Shell integration adds wrapper functions to your shell that automatically
record sessions when you run configured agents. It modifies your .zshrc
or .bashrc with a clearly marked section.

EXAMPLES:
    agr shell status         [37mCheck if shell integration is installed[0m
    agr shell install        [37mInstall shell integration[0m
    agr shell uninstall      [37mRemove shell integration[0m

After installing, restart your shell or run: source ~/.zshrc

Usage: agr shell <COMMAND>

Commands:
  status     [37mShow shell integration status[0m
  install    [37mInstall shell integration to .zshrc/.bashrc[0m
  uninstall  [37mRemove shell integration from .zshrc/.bashrc[0m
  help       [37mPrint this message or the help of the given subcommand(s)[0m

Options:
  -h, --help
          Print help (see a summary with '-h')
--- stderr ---
