tests/integration/snapshots/integration__snapshot_cli_test__cli_version.snap
---
source: tests/integration/cli_test.rs
assertion_line: 189
expression: output
---
=== agr --version ===
Exit code: 0

--- stdout ---
agr <VERSION>
--- stderr ---
